force-app/main/default/objects/AppLogEvent__e.object
<CustomObject>
    <fields>
        <fullName>AffectedId__c</fullName>
        <description>Ids for object(s) related to log event</description>
        <label>Affected Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class name</description>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method name</description>
        <label>Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogLevel__c</fullName>
        <label>LogLevel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AppLogEvent</label>
    <pluralLabel>AppLogEvents</pluralLabel>
</CustomObject>